--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,18 @@
         android:theme="@style/Theme.AlmeidaPinturasApp"
         tools:targetApi="31">
         <activity
+            android:name=".CadastroAgendaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EditarAgendaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ConsultarAgendaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AgendaActivityAdapter"
+            android:exported="false" />
+        <activity
             android:name=".Utils"
             android:exported="false" />
         <activity
@@ -54,15 +66,6 @@
             android:exported="false" />
         <activity
             android:name=".EsqueciSenhaActivity"
-            android:exported="false" />
-        <activity
-            android:name=".AgendaActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ClientesActivity"
-            android:exported="false" />
-        <activity
-            android:name=".FuncionarioActivity"
             android:exported="false" />
         <activity
             android:name=".TelaInicialActivity"
